# api/controllers/users_signup.js
@@ -1,0 +1,22 @@
+'use strict';
+
+var util = require('util');
+const knex = require('../../knex');
+
+
+module.exports = {
+  usersSignup: usersSignup
+};
+
+function usersSignup(req, res) {
+
+  // knex('users')
+  //   .select('*')
+  //   .then((result) => {
+  //     res.send(result);
+  //   })
+  //   .catch((err) => {
+  //     next();
+  //   });
+
+}
